Fixed the font sizes in the card view, and fixed the loading icons overlapping the header

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 .loadingIcon {
   animation: Rotate infinite 2s linear;
   height: 19vh;
+  z-index: 0;
 }
 
 .App-header {
@@ -34,10 +35,11 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .content {
-  margin-top: 225px;
+  margin-top: calc(19vh + 4vh + 8vh);
 }
 
 #HeaderText {
@@ -52,7 +54,7 @@ img {
 
 div {
   font-family: 'Montserrat', sans-serif;
-  font-size: 10px;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -108,6 +110,7 @@ li {
   height: 100%;
   background-color: rgba(22, 22, 22, 0.5);
   padding: 0;
+  z-index: 2;
 }
 
 .card {
@@ -123,6 +126,7 @@ li {
   max-width: 500px;
   box-shadow: 0px 15px 25px #101010;
   outline: 0;
+  z-index: 3;
 }
 
 #closebutton {
